--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,29 +2,38 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 /*Comienzo de header*/
 header{
-    background-color: rgb(48, 47, 47);
+    background-color: rgb(21, 21, 21);
+    
 }
 ul>li{
     display: inline-block;
-    padding: 10px 8px;
+    padding: 10px 7px;
+ 
     font-size: 20px;
 }
 li>a{
+    list-style: none;
     text-decoration: none;
     color: white;
+    margin: 0px 20px;
 }
-
+ul>li:hover{
+    background-color: rgba(245, 245, 220, 0.119);  
+    border-radius: 3px;
+    transition: 1.2s;  
+}
 ul{
     text-align: center;    
 }
 #fotoPerfil>img{
     width:120px;
     border-radius: 60px;
-    border: 2px solid black;
-    margin: 14px 0px 0px 40px;
+    border: 2px solid rgb(76, 70, 70);
+    margin: 14px 0px 0px 25px;
 }
 .contGralHead{
     display: flex;
@@ -35,7 +44,8 @@ ul{
     padding: 12px 8px 0px 0px;
 }
 .nav-bar{
-    background-color: rgb(77, 74, 74);
+    background-color: rgb(41, 39, 39);
+    box-shadow: 12px 5px rgb(164, 162, 162);
 }
 .rrssh>.fa-whatsapp{
     color:rgb(5, 167, 8);
@@ -52,4 +62,34 @@ ul{
 /*Comienza main - #Home*/
 #Home{
     min-height: 80vh;
+    background-image: url(/assets/img/fondohome.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px;
+    text-align: center;
+}
+#Home>h2{
+    color: white;
+    font-size: 50px;
+    padding: 95px 0px 0px;
+}
+.subtitle>p{
+    color: white;
+    padding:0px 10px 30px 0px;
+    margin: 0px 30px 0px 0px;
+    font-size: 22px;
+    
+}
+.btn-Contact{
+    text-decoration: none;
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(53,53,54,1) 6%, rgba(32,32,32,1) 35%, rgb(58, 58, 58) 79%);
+    padding: 12px;
+    color: white;
+    border: 1px solid rgb(121, 123, 125);
+    border-radius: 5px;
+    font-size: 18px;
+}
+.btn-Contact:hover{
+    background: radial-gradient(circle, rgb(35, 35, 35) 0%, rgb(117, 117, 118) 6%, rgba(32,32,32,1) 35%, rgb(91, 88, 88) 79%);
+   
 }
