--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,15 @@ ul{
 /*Comienzan proyectos*/
 #Proyectos>h3{
     font-size: 30px;
+    color: lightsalmon;
+    padding: 30px;
 }
+#Proyectos{
+    background-color: #141414;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%235b2502' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    padding: 20px;
+}
+
 .row{
     display: flex;
     flex-wrap: wrap;
@@ -109,6 +117,18 @@ ul{
 }
 .card>img{
     width: 240px;
-    padding: 5px;
     margin: 10px;
+}
+.card{
+    background-color: beige;
+    margin: 10px;
+    border-radius: 8px;
+    border: 4px solid rgb(142, 10, 6);
+}
+.card-body{
+    text-align: center;
+    padding: 3px;
+}
+.contProyectos{
+    margin-bottom: 30px;
 }
