--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,7 @@ ul{
     font-size: 30px;
     color: lightsalmon;
     padding: 30px;
+    font-family: sans-serif;
 }
 #Proyectos{
     background-color: #141414;
@@ -125,9 +126,15 @@ ul{
     border-radius: 8px;
     border: 4px solid rgb(142, 10, 6);
 }
+.card:hover{
+    background-color: rgba(174, 166, 166, 0.616);
+    transition: 0.9s;
+    cursor: pointer;
+    transform:scale(1.1);
+}
 .card-body{
     text-align: center;
-    padding: 3px;
+    padding:0px 0px 8px 0px;
 }
 .contProyectos{
     margin-bottom: 30px;
