--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,6 @@ ul{
 /*Comienza main - #Home*/
 #Home{
     box-shadow: 0px 0px 14px 0px rgba(174, 166, 166, 0.429);
-
     min-height: 80vh;
     background-image: url(/assets/img/fondohome.jpg);
     background-repeat: no-repeat;
@@ -98,7 +97,7 @@ ul{
    
 }
 /*Comienzan proyectos*/
-#Proyectos>h3{
+#Proyectos>h3,#About>h3{
     font-size: 30px;
     color: lightsalmon;
     padding: 30px;
@@ -107,7 +106,6 @@ ul{
 #Proyectos{
     background-color: #141414;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%235b2502' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    padding: 20px;
 }
 
 .row{
@@ -137,5 +135,28 @@ ul{
     padding:0px 0px 8px 0px;
 }
 .contProyectos{
-    margin-bottom: 30px;
+    padding-bottom: 50px;
+}
+
+/*Comienza seccion #About */
+
+#About>h3{
+    color: #202020;
+    
+
+}
+#About{
+    padding: 50px;
+    background-image: url(https://images.squarespace-cdn.com/content/v1/5d1382cc5c08640001a29889/1562874402068-5SVOTO8U79AJQONX0OYH/about-me-background-blue.jpg?format=2500w);
+}
+.contSkills{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    row-gap: 25px;
+}
+.skills{
+    color: rgb(18, 18, 18);
+    padding: 20px;
+    border: 1px solid rgb(14, 13, 13);
 }
