--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,15 +97,17 @@ ul{
    
 }
 /*Comienzan proyectos*/
-#Proyectos>h3,#About>h3{
-    font-size: 30px;
+#Proyectos>h3,#About>h3,#Contact>h3{
+    font-size: 35px;
     color: lightsalmon;
     padding: 30px;
     font-family: sans-serif;
 }
 #Proyectos{
+    padding: 50px;
     background-color: #141414;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%235b2502' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    
 }
 
 .row{
@@ -154,9 +156,59 @@ ul{
     flex-wrap: nowrap;
     flex-direction: column;
     row-gap: 25px;
+    padding-bottom: 50px;
 }
 .skills{
     color: rgb(18, 18, 18);
     padding: 20px;
     border: 1px solid rgb(14, 13, 13);
 }
+/*Ccomienza section #Contact*/
+
+#Contact{
+    padding: 50px;
+    background: url(https://i0.wp.com/gdcindia.co.in/wp-content/uploads/2019/03/contact-us-background.jpg?ssl=1);
+    background-size: cover;
+}
+#Contact>h3{
+    color: white;
+    -webkit-text-stroke:3px rgba(138, 93, 90, 0.518);
+}
+.contContact{
+    display: inline-block;
+    padding:70px;
+    background-color: #020202;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23f3f3df' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+}
+fieldset{
+    border:none;
+}
+label{
+    color: white;
+    display: block;
+}
+input{
+    width: 100%;
+}
+.btn-Submit{
+    text-align: center;
+}
+.btn-Submit>button{
+    padding: 8px;
+    margin:26px 0px 0px 0px;
+    color: white;
+    background-color: #141414;
+    border: 1px dashed white;
+    text-transform: uppercase;
+}
+.btn-Submit>button:hover{
+    background-color: grey;
+    cursor: pointer;
+}
+article{
+    display: flex;
+    justify-content: center;   
+}
+
+
+
