--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,7 @@ ul{
 .card-body{
     text-align: center;
     padding:0px 0px 8px 0px;
+    font-family: 'Press Start 2P', cursive;
 }
 .contProyectos{
     padding-bottom: 50px;
@@ -163,10 +164,14 @@ ul{
     row-gap: 25px;
     padding-bottom: 50px;
 }
+.fa-solid{
+    font-size: 24px;
+}
 .skills{
     color: rgb(18, 18, 18);
     padding: 20px;
     border: 1px solid rgb(14, 13, 13);
+    font-family: 'Allerta Stencil', sans-serif;
 }
 /*Ccomienza section #Contact*/
 
@@ -174,6 +179,7 @@ ul{
     padding: 50px;
     background: url(https://i0.wp.com/gdcindia.co.in/wp-content/uploads/2019/03/contact-us-background.jpg?ssl=1);
     background-size: cover;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 #Contact>h3{
     color: white;
@@ -191,6 +197,7 @@ fieldset{
 }
 label{
     color: white;
+    padding: 10px 0px;
     display: block;
 }
 input{
@@ -221,6 +228,7 @@ footer{
     justify-content: space-between;
     padding: 30px;
     color: white;
+    font-family: 'Allerta Stencil', sans-serif;
 }
 .redPersonal{
     color: white;
