--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,7 @@ ul{
     cursor: pointer;
     transform:scale(1.1);
 }
-.card-body{
+.card-body>h4{
     text-align: center;
     padding:0px 0px 8px 0px;
     font-family: 'Press Start 2P', cursive;
